--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -86,7 +86,7 @@ body {
 
 .apos-theme-dark {
   .apos-theme--primary-blue { @include apos-primary-mixin(#0062ff); }
-  --a-base-1: #7588A0;
+  --a-base-1: #d1d3d5;
   --a-base-2: #6B7C92;
   --a-base-3: #607084;
   --a-base-4: #566477;
