--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -2,6 +2,11 @@
   transition: $what $duration $ease;
 }
 
+@mixin apos-align-icon () {
+  display: flex;
+  align-items: center;
+}
+
 @mixin apos-list-reset () {
   list-style-type: none;
   margin: 0;
