--- a/src/scss/_inputs.scss
+++ b/src/scss/_inputs.scss
@@ -100,6 +100,7 @@ $input-max-width: 460px;
   color: var(--a-base-2);
   &:hover {
     cursor: pointer;
+    color: var(--a-primary-text);
   }
   & + &,
   .apos-legend + & {
