--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -104,7 +104,7 @@ body {
 }
 
 .apos-theme--primary-blue { @include apos-primary-mixin(#0062ff); }
-.apos-theme--primary-purple { @include apos-primary-mixin(#6516DD); }
+.apos-theme--primary-purple { @include apos-primary-mixin(rgb(2, 2, 2)); }
 .apos-theme--primary-orange { @include apos-primary-mixin(#e65100); }
 .apos-theme--primary-uber { @include apos-primary-mixin(#1EACC7); }
 .apos-theme--primary-sun { @include apos-primary-mixin(#f7a704); }
