refactor context menus to have a button, lots of ux worked out

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,6 @@
 @import '_storybook';
 @import '_theme';
-@import '_ui';
+@import '_scrollbars';
 @import '_functions';
 @import '_mixins';
 @import '_utilities';
