--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -1,5 +1,4 @@
-// For more this naming system:
-// http://alexbea.com/blog/ergonomic-breakpoint-variables
+// For more on this naming system, search "ergonomic responsive breakpoints."
 $breakpoints: (
   palm: 320px,
   hands: 600px,
@@ -15,9 +14,12 @@ $breakpoints: (
     @content;
   }
 }
-@mixin media-down ($bp) {
-  $bpVal: map-get($breakpoints, $bp);
-  @media screen and (max-width: $bpVal - 1px) {
-    @content;
-  }
-}
+// We should use the mixin above. In the unlikely case that a `max-width`
+// media query is needed, the mixin below should be used rather than
+// hand-rolling something.
+// @mixin media-down ($bp) {
+//   $bpVal: map-get($breakpoints, $bp);
+//   @media screen and (max-width: $bpVal - 1px) {
+//     @content;
+//   }
+// }
