Sets up the basics of the admin bar component

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -11,6 +11,7 @@ $font-weights: (
 $font-sizes: (
   default: 12px,
   meta: 10px,
+  menu-label: 14px,
   input-label: 14px,
   input: 12px,
   input-hint: 12px,
