--- a/src/scss/_inputs.scss
+++ b/src/scss/_inputs.scss
@@ -139,6 +139,18 @@ $box-width: 12px;
   }
 }
 
+.apos-input--select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background-repeat: no-repeat, repeat;
+  &:hover {
+    cursor: pointer;
+  }
+  &:hover ~ .apos-input-icon, &:active ~ .apos-input-icon {
+    color: var(--a-primary);
+  }
+}
+
 .apos-input-icon {
   position: absolute;
   right: $input-padding;
